# predictionsV2

./: .gitignore  Makefile  NFLprediction.md  README.md  blueprint.md  modeloptimization.md  package.json  phasebdevroadmap.md  pyproject.toml  requirements.txt
api/: README.md  __init__.py  main.py  requirements.txt  run_local.py
config/: credentials.yaml.example  model_version.py  nfl_phase1_baseline.yml
docs/: AI_CHAT_IMPLEMENTATION.md  CALIBRATION_FIX_COMPLETE.md  COMPREHENSIVE_AUDIT_REPORT.md  GEMINI_STREAMING_AUDIT.md  GEMINI_STREAMING_COMPREHENSIVE_AUDIT.md  GEMINI_STREAMING_TRUNCATION_FIX.md  REAUDIT_2025_SUMMARY.md  audit_report.md  calibration_fix_summary.md  data_sources.md  eval_blueprint_v1.md  experiment_schema.md  generate_features_usage.md  gpu_training_setup.md  ingestion_2025_week14_summary.md  injury_data_sources.md  leak_free_test_2025_summary.md  live_output_contract.md  models_advanced.md  odds_api_integration.md  phase1_implementation_summary.md  phase2_implementation_summary.md  phase3_implementation_summary.md  phaseB_readiness_audit.md  production_training_guide.md  roadmap_phaseA_phaseB.md  simulate_prediction_usage.md  trainer_unification_summary.md  training_audit_summary.md  training_complete_summary.md  ui-live-dashboard-notes.md  weather_api_optimization.md  why_mock_data.md
eval/: backtest.py  metrics.py  reports.py
features/: __init__.py  feature_table_registry.py  registry.py
footballdb_scraper/: QUICKSTART.md  README.md  USAGE.md  __init__.py  requirements.txt  run.sh
ingestion/: __init__.py
models/: __init__.py  base.py  (+4 more)
(+424 files in other folders)
